--- a/client/static/index.html
+++ b/client/static/index.html
@@ -9,5 +9,5 @@
     <div id='root'>
     </div>
     <script src="/client/static/index.js"></script>
-  </body>
+  <script type="text/javascript" src="client/static/bundle.js"></script></body>
 </html>
