--- a/client/index.tmpl.html
+++ b/client/index.tmpl.html
@@ -8,6 +8,6 @@
   <body>
     <div id='root'>
     </div>
-    <script src="/client/static/index.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
